--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.326",
-    "@types/node": "22.15.29",
-    "@vitest/coverage-v8": "3.2.0",
-    "@vitest/ui": "3.2.0",
+    "@types/node": "22.15.30",
+    "@vitest/coverage-v8": "3.2.2",
+    "@vitest/ui": "3.2.2",
     "jsdom": "26.1.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.2.0"
+    "vitest": "^3.2.2"
   },
-  "keywords": ["chrome-extension", "automation", "claude-ai"],
+  "keywords": [
+    "chrome-extension",
+    "automation",
+    "claude-ai"
+  ],
   "dependencies": {
     "@mozilla/readability": "^0.6.0"
   },
   "author": "",
   "license": "MIT",
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
