--- a/package.json
+++ b/package.json
@@ -22,19 +22,13 @@
     "vite": "^6.3.5",
     "vitest": "^3.2.2"
   },
-  "keywords": [
-    "chrome-extension",
-    "automation",
-    "claude-ai"
-  ],
+  "keywords": ["chrome-extension", "automation", "claude-ai"],
   "dependencies": {
     "@mozilla/readability": "^0.6.0"
   },
   "author": "",
   "license": "MIT",
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["esbuild"]
   }
 }
