--- a/package.json
+++ b/package.json
@@ -15,20 +15,26 @@
   "devDependencies": {
     "@types/chrome": "^0.0.326",
     "@types/node": "24.0.3",
-    "@vitest/coverage-v8": "3.2.3",
-    "@vitest/ui": "3.2.3",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "jsdom": "26.1.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   },
-  "keywords": ["chrome-extension", "automation", "claude-ai"],
+  "keywords": [
+    "chrome-extension",
+    "automation",
+    "claude-ai"
+  ],
   "dependencies": {
     "@mozilla/readability": "^0.6.0"
   },
   "author": "",
   "license": "MIT",
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
